<resources>
    <string name="app_name">旧书捐赠</string>

    <string name="home">主页</string>
    <string name="sort">分类</string>
    <string name="mine">我的</string>
    <string name="search">搜索</string>

    <string name="project_name">项目名称</string>
    <string name="project_description">项目描述</string>
    <string name="project_description_detail">  孩子是顶尖的梦想家，心中都怀着一个不凡的梦想。然而，离我们不远的岳西五河镇河南村，处于大别山腹地，交通极其不便，山多田少，资源匮乏，经济落后，教育基础相当薄弱：村内唯一的校园“河南村小学”仅6名教师，平均年龄53，所有学生均为留守儿童。图书读物仅有供教师所用的一百来本书籍。学生们则一本没有，约有80%的孩子念到初中便辍学外出打工。村内也无一处书店。孩子们因条件限制失去了在书海畅游的甜美梦想。
　　此次xx建筑工业学院艺术学院环艺专业“古建筑再利用毕业小组”在河南村进行毕业实习，深为所见之景感动痛心及忧虑，这些祖国的花朵们没有与城市孩子们平等的教育机会……。我们真情呼唤大家，伸出温暖的手，奉献真诚的心，用我们的真情，清理自己的书架，将闲置的书籍捐赠到孩子们的手中，为孩子撑起一片梦想的天空。
　　您的捐赠也许有限，但涓涓细流，能够汇聚成海;拳拳爱心，能够感动一生;捐一份书香，留一份真情，请快快加入到捐书献爱心活动中来吧!"</string>
    <string name="need_number">所需数量</string>
    <string name="project_description_detail1">  书籍是人类进步的阶梯，是开启人类智慧的金钥匙。书是让孩子们看到外面世界的窗口。好的书籍，往往能够影响一个人的一生。
当我们畅游在知识的海洋里的时候，是否曾想到无数双饱含对知识渴求的眼睛正默默的注视着我们；当您把认为没用的书籍扔掉或卖掉时，您是否想到那些因贫困而买不起书的孩子们对书的渴望！
现在很多贫困地区的孩子，除了教科书以外，没见过别的书。对她们来说能上学已经不容易了，读本好书无疑是难上加难。
书籍是伴随我们走过人生岁月的益友，时光荏苒，总有许多旧书积存。相信每一位爱书人都会希望自己的图书能在一双又一双求知的眼睛里传播力量，而不是在箱底蒙尘……</string>
    <string name="project_statue">筹备中</string>
    <string name="received_number">已筹备数量</string>
</resources>
