<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProjectDetailActivity">

    <LinearLayout
        android:id="@+id/ll_projectDetail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/background_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/ib_project_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_info_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:text="项目详情"
            android:textColor="#2d2d2d"
            android:textSize="20sp" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_projectDetail_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_statue"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background = "@mipmap/home_banner_img2">

                <TextView
                    android:id="@+id/tv_detail_project_statue"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/project_statue_bac"
                    android:text="@string/project_statue"
                    android:textAlignment="center"
                    android:textColor="@color/background_white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_white">

                <TextView
                    android:id="@+id/tv_detail_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/project_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_detail_book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_detail_project_name"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="所需书籍名称"
                    android:textSize="25sp" />

                <LinearLayout
                    android:id="@+id/ll_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_detail_book_name"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_title_need_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/need_number"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/received_number" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_title"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_detail_need_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="100本" />

                    <TextView
                        android:id="@+id/tv_detail_received_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="0本" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/background_white"
                android:text="@string/project_description"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_detail_project_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_white"
                android:lineSpacingMultiplier="1.5"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/project_description_detail"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:background="@color/background_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="捐书流程"
                    android:textColor="@color/iconAfter"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="#f6f6f6f6"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_book"
                        android:drawablePadding="10dp"
                        android:text="我要捐书"
                        android:textAlignment="center"
                        android:textColor="@color/textTitleColor" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_express"
                        android:drawablePadding="10dp"
                        android:text="预约快递"
                        android:textAlignment="center"
                        android:textColor="@color/textTitleColor" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_receive"
                        android:drawablePadding="10dp"
                        android:text="书籍接受"
                        android:textAlignment="center"
                        android:textColor="@color/textTitleColor" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_do"
                        android:drawablePadding="10dp"
                        android:text="公益执行"
                        android:textAlignment="center"
                        android:textColor="@color/textTitleColor" />
                </LinearLayout>

                <include layout="@layout/donate_step" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_projectDetail_bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:background="@color/background_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_detail_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/home"
            android:drawableTop="@drawable/ic_home"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_detail_to_single_donate"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_donate"
            android:text="我要捐书"
            android:textAlignment="center"
            android:textColor="@color/background_white"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>